--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,20 +2,28 @@ cmake_minimum_required(VERSION 3.16)
 project(server)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-if(NOT CMAKE_BUILD_TYPE)
-  set(default_build_type "Debug")
-  message(STATUS "Set the build type to `${default_build_type}` as none was specified.")
-  set(CMAKE_BUILD_TYPE ${default_build_type} CACHE STRING "Chooce the build type." FORCE)
-  set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS
-  "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
-endif()
-message(STATUS "myProject Build Type: ${CMAKE_BUILD_TYPE}")
 
-file(GLOB SOURCES src/*.cc)
+find_package(Boost REQUIRED COMPONENTS system)
+find_package(GTest REQUIRED)
+find_package(Threads REQUIRED)
+
+add_library(
+  tcp_lib
+  src/echo_server.cc
+)
+target_include_directories(tcp_lib PUBLIC include)
+target_link_libraries(tcp_lib PUBLIC Boost::boost)
+
 add_executable(
   server
-  ${SOURCES}
+  src/main.cc
 )
+target_link_libraries(server PRIVATE tcp_lib)
 
-target_include_directories(server PUBLIC include)
-#Set the version for myProject
+enable_testing()
+add_executable(
+  tcp_tests
+  test/echo_server_test.cc
+)
+target_link_libraries(tcp_tests PRIVATE tcp_lib GTest::gtest_main)
+add_test(NAME tcp_tests COMMAND tcp_tests)
